--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "dompurify": "^2.2.8",
+    "dotenv": "^10.0.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "jsdom": "^16.2.1",
